todo_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: todo-app-srvc
spec:
    type: ClusterIP
    selector:
        app: todo-app
    ports:
        - port: 8765
          protocol: TCP
          targetPort: 9876
